# tooldoce

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  Makefile  Makefile.old  README.md  TODO.md  cmake_install.cmake  pull_request_template.md  tags
include/libnfe/: NFref.h  defs.h  erros.h  nfe.h  refNF.h
src/libnfe/: CMakeCache.txt  CMakeLists.txt  Makefile  NFref.c  cmake_install.cmake  endereco.c  endereco.h  ide.c  ide.h  local.c  refNF.c  utils.c  utils.h
